--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "path": "^0.12.7",
+    "scroll-snap-slider": "^3.2.0",
     "swiper": "^11.0.5",
     "the-new-css-reset": "^1.11.2"
   }
